tests/js/invalid/booleans/false.buri
-- false is not a valid boolean by default

item = false